--- a/Resume.css
+++ b/Resume.css
@@ -7,7 +7,7 @@
 	--color-gray-dark-3: #9a9a9a;
 	--color-blue-dark-1: #00387f;
 	--color-tiffany: #00a6a6;
-	--profile-theme: #4682bf;
+	--header-theme: #4682bf;
 	--timeline-circle-theme: #14253e;
     --color-gold: #ffd700;
 	
@@ -49,22 +49,22 @@ body {
 	box-shadow: 5px 0px 15px 0px #b3b3b3;
 	z-index: 5;
 }
-.profile {
+.header {
 	position: relative;
-	background-color: var(--profile-theme);
+	background-color: var(--header-theme);
 	padding: 2rem 1rem;
 	margin-bottom: 50px;
 	text-align: center;
 	user-select: none;
 }
-.profile::after {
+.header::after {
 	content: " ";
 	position: absolute;
 	left: 0;
 	bottom: -15px;
 	width: 100%;
 	height: 30px;
-	background-color: var(--profile-theme);
+	background-color: var(--header-theme);
 	transform: skewY(-5deg);
 }
 .photo img {
@@ -107,7 +107,7 @@ body {
 	transition: all 0.3s;
 }
 .info-section i {
-	color: var(--profile-theme);
+	color: var(--header-theme);
 	width: 20px;
 	height: 20px;
 }
@@ -124,21 +124,19 @@ body {
 	bottom: -3px;
 	width: 0;
 	height: 2px;
-	background-color: var(--profile-theme);
+	background-color: var(--header-theme);
 	transition: width 0.3s;
-	/*transition-timing-function: cubic-bezier(.64,.51,.16,.86);*/
 	transition-timing-function: cubic-bezier(.92,.57,.33,1.02);
 	transform: translate(-50%, 0);
 }
 
 .link span:hover {
-	color: var(--profile-theme);
+	color: var(--header-theme);
 }
 .link span:hover::after {
 	width: 100%;
 }
 
-/* Detail section overall setting*/
 .detail {
 	flex: 1 0 0;
 	background-color: white;
@@ -165,11 +163,11 @@ body {
 .detail-section.edu > .detail-content {
 	padding-left: calc(1.5rem + 10px);
 }
-.title-icon + span {
+.title-pic + span {
 	font-size: 1.5rem;
 	transition: all 0.3s;
 }
-.title-icon {
+.title-pic {
 	display: inline-flex;
 	justify-content: center;
 	align-items: center;
@@ -177,25 +175,24 @@ body {
 	margin-right: 1rem;
 	width: 2.5rem;
 	height: 2.5rem;
-	background-color: var(--profile-theme);
+	background-color: var(--header-theme);
 	border-radius: 50%;
 	transition: all 0.3s;
 }
-.title-icon i {
+.title-pic i {
 	color: white;
 	line-height: 1rem;
 	font-size: 1rem;
 	text-align: center;
 }
-.detail-section:hover .title-icon {
+.detail-section:hover .title-pic {
 	transform: scale(1.5);
 	margin-right: 1.5rem;
 }
-.detail-section:hover .title-icon + span {
+.detail-section:hover .title-pic + span {
 	letter-spacing: 1.5px;
 }
 
-/* time line block in education section */
 .timeline-block {
 	position: relative;
 	padding-left: 30px;
@@ -243,7 +240,7 @@ body {
 	animation: circle 1.2s infinite;
 }
 
-/* Programming skills section */
+
 .pg-list, .tool-list, .favor-list {
 	padding: 0;
 	list-style: none;
@@ -262,13 +259,13 @@ body {
 .pg-list > li > span {
 	flex: 0 0 100px;
 }
-.sb-skeleton > .skillbar {
+.sb-skeleton > .skill_bar {
 	position: absolute;
 	left: 0;
 	top: -1px;
 	width: var(--pgbar-length);
 	height: 4px;
-	background-color: var(--profile-theme);
+	background-color: var(--header-theme);
 }
 .tool-list {
 	list-style: none;
@@ -293,16 +290,16 @@ body {
 	stroke: #cdcdcd;
 
 }
-.tool-list > li > svg > circle.cbar {
+.tool-list > li > svg > circle.coutline {
 	stroke-width: 3px;
-	stroke: var(--profile-theme);
+	stroke: var(--header-theme);
 	stroke-linecap: round;
 	stroke-dashoffset: ;
 	stroke-dasharray: calc(var(--MATH-PI) * 45 * 2);
 	transition: all 0.8s;
 	transition-timing-function: cubic-bezier(.64,.51,.16,.86);
 }
-.tool-list > li:hover > svg > circle.cbar {
+.tool-list > li:hover > svg > circle.coutline {
 	stroke-width: 4px;
 	stroke: var(--color-gold);
 	stroke-dashoffset: calc(var(--MATH-PI) * 45 * 2 * (1 - var(--percent)));
@@ -323,7 +320,8 @@ body {
 	font-size: 1rem;
 	transform: translate(-50%, -50%);
 }
-/* Interests Section */
+
+
 .outer-frame {
 	border: 1px solid var(--color-gray-dark-3);
 	border-radius: 5px;
@@ -340,7 +338,7 @@ body {
 	align-items: center;
 	justify-content: baseline;
 	flex-direction: column;
-	color: var(--profile-theme);
+	color: var(--header-theme);
 	padding: 1rem 0;
 	transition: all 0.3s;
 }
@@ -383,10 +381,10 @@ body {
 	.intro-section {
 		padding: 0 2rem;
 	}
-	.profile {
+	.header {
 		margin-bottom: 1rem;
 	}
-	.profile::after {
+	.header::after {
 		display: none;
 	}
 	.photo img {
